<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradien"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:layout_margin="40dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="35dp"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:layout_height="40dp"
                android:hint="@string/nama"
                android:id="@+id/nama"
                />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/nim"
                android:id="@+id/nim"
                />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/jurusan"
                android:id="@+id/jurusan"
                />

            <Button
                android:id="@+id/tambah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:text="@string/tambah"
                app:layout_constraintBottom_toTopOf="@id/btn_semua_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editJurusan" />

            <Button
                android:id="@+id/btn_semua_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Lihat Semua Data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tambah" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
